# TaskManagerPlus

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TaskManagerPlus.sln
TaskManagerPlus/: ADLXController.cpp  CpuMonitor.cpp  CpuMonitor.h  DiskMonitor.cpp  DiskMonitor.h  GpuMonitor.cpp  GpuMonitor.h  GuiController.cpp  GuiController.h  IGpuController.h  Main.cpp  MemoryMonitor.cpp  MemoryMonitor.h  MonitorUtils.cpp  MonitorUtils.h  NVIDIAController.cpp  NetworkMonitor.cpp  NetworkMonitor.h  TaskManagerPlus.vcxproj  TaskManagerPlus.vcxproj.filters  TaskManagerPlus.vcxproj.vcxproj.filters
TaskManagerPlus/Include/: ADLXController.h  CpuMonitor.h  DiskMonitor.h  GpuMonitor.h  GuiController.h  IGpuController.h  IMonitor.h  MemoryMonitor.h  MonitorBase.h  MonitorUtils.h  NVIDIAController.h  NetworkMonitor.h  SystemStatus.h
TaskManagerPlus/Include/common/: GuiController.h  IGpuController.h  MonitorBase.h  MonitorUtils.h
TaskManagerPlus/Include/linux/: CpuMonitor.h  DiskMonitor.h  GpuMonitor.h  MemoryMonitor.h  NetworkMonitor.h
TaskManagerPlus/Include/windows/: ADLXController.h  ADLXHelper.h  MemoryMonitor.h  NVIDIAController.h  NetworkMonitor.h  WinAPIs.cpp
TaskManagerPlus/Include/windows/ADLX/: ADLXDefines.h
TaskManagerPlus/lib/: pdcurses.lib
TaskManagerPlus/src/common/: GuiController.cpp  Main.cpp  MonitorUtils.cpp
TaskManagerPlus/src/linux/: CpuMonitor.cpp  DiskMonitor.cpp  GpuMonitor.cpp  MemoryMonitor.cpp  NetworkMonitor.cpp
TaskManagerPlus/src/windows/: ADLXController.cpp  DiskMonitor.cpp
